[gd_scene load_steps=8 format=3 uid="uid://bat3plq8yyysb"]

[ext_resource type="Script" uid="uid://qufri3bb6ugs" path="res://script/cinematica.gd" id="1_2hour"]
[ext_resource type="Texture2D" uid="uid://d0phoj0bf1da" path="res://Cinematica/Panel.png" id="2_l4xgv"]
[ext_resource type="FontFile" uid="uid://boqb58gh4foy4" path="res://Selector/wayfarers-toy-box.ttf" id="3_p6lri"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sglcl"]
texture = ExtResource("2_l4xgv")

[sub_resource type="Animation" id="Animation_v6108"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gdg1n"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chw6h"]
_data = {
&"RESET": SubResource("Animation_v6108"),
&"fade_to_black": SubResource("Animation_gdg1n")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2hour")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
expand_mode = 1
stretch_mode = 6

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -193.0
offset_right = 360.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_sglcl")

[node name="Saltar" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 841.0
offset_top = 141.0
offset_right = 924.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 20
text = "Saltar"
flat = true

[node name="Button_next" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 272.0
offset_top = 120.0
offset_right = 448.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("3_p6lri")
text = "Next"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 96.0
offset_top = 24.0
offset_right = 608.0
offset_bottom = 80.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_chw6h")
}

[connection signal="pressed" from="Panel/Saltar" to="." method="_on_saltar_pressed"]
[connection signal="pressed" from="Panel/Button_next" to="." method="_on_button_pressed"]
